# ChangeLog for dev-python/paramiko
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/paramiko/ChangeLog,v 1.50 2009/12/19 19:33:41 armin76 Exp $

  19 Dec 2009; Raúl Porcel <armin76@gentoo.org> paramiko-1.7.6.ebuild:
  ia64/sparc stable wrt #295697

  19 Dec 2009; Jeroen Roovers <jer@gentoo.org> paramiko-1.7.6.ebuild:
  Stable for HPPA (bug #295697).

  16 Dec 2009; Markus Meier <maekke@gentoo.org> paramiko-1.7.6.ebuild:
  amd64/x86 stable, bug #295697

  09 Dec 2009; nixnut <nixnut@gentoo.org> paramiko-1.7.6.ebuild:
  ppc stable #295697

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org> paramiko-1.7.6.ebuild:
  Marked ~ppc64.

*paramiko-1.7.6 (02 Nov 2009)

  02 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -paramiko-1.7.4.ebuild, +paramiko-1.7.6.ebuild:
  Version bump.

  27 Oct 2009; Raúl Porcel <armin76@gentoo.org> paramiko-1.7.5.ebuild:
  ia64/sparc stable wrt #288122

  16 Oct 2009; Jeroen Roovers <jer@gentoo.org> paramiko-1.7.5.ebuild:
  Stable for HPPA (bug #288122).

  15 Oct 2009; Markus Meier <maekke@gentoo.org> paramiko-1.7.5.ebuild:
  amd64/x86 stable, bug #288122

  11 Oct 2009; nixnut <nixnut@gentoo.org> paramiko-1.7.5.ebuild:
  ppc stable #288122

  11 Oct 2009; Fabian Groffen <grobian@gentoo.org> paramiko-1.7.5.ebuild:
  Merge from Prefix

  07 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  paramiko-1.7.5.ebuild:
  Set SUPPORT_PYTHON_ABIS.

*paramiko-1.7.5 (07 Sep 2009)

  07 Sep 2009; Patrick Lauer <patrick@gentoo.org> +paramiko-1.7.5.ebuild:
  Bump

  11 Jun 2009; Raúl Porcel <armin76@gentoo.org> paramiko-1.7.4.ebuild:
  ia64/sparc stable wrt #27133

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> paramiko-1.7.4.ebuild:
  Stable for HPPA (bug #271933).

  31 May 2009; Markus Meier <maekke@gentoo.org> paramiko-1.7.4.ebuild:
  amd64/x86 stable, bug #271933
