@@ -3,6 +3,6 @@ AUX paramiko-1.7.2-tests_cleanup.patch 965 RMD160 dc75ce89c8100448fa707ae56570e1
 DIST paramiko-1.7.5.tar.gz 843046 RMD160 7b3f746862cbb5448b5ed6c08dc951c85ca137d4 SHA1 592be7a08290070b71da63a8e6f28a803399e5c5 SHA256 c0cce631a8279a7970da60bbe5f129c3530d5ad773f2d88bfaf2e1c1f68ff490
 DIST paramiko-1.7.6.tar.gz 843748 RMD160 bd1e4c983db9fb450066531b5d24847946f683eb SHA1 0051dd01b7d17823d567b2988495b32afb549c20 SHA256 3059263b016255640151cde1e3e74ffd7234b90e780628865cb3f5a407fd5002
 EBUILD paramiko-1.7.5.ebuild 1079 RMD160 51aa90198bee053d4cf33d0bc083153f898921f0 SHA1 81396cf6eea1d74800bf94e3a034d615f365b2f3 SHA256 01f0a194233aacec15476f47dfaf3fa9077d8d89a8b27383352efc97eede9a4d
-EBUILD paramiko-1.7.6.ebuild 1043 RMD160 f3635e350cc280361e2120fb66aef23559864354 SHA1 f5e5d06412223cf54a34b9b91a70989a436770ed SHA256 172b2b5181170dd02aa352f2f011d0afe907763a8b6f0ce570fbe686cff8688d
-MISC ChangeLog 6660 RMD160 4601c6884e45f66fc70d3011e94b33fa2d17af11 SHA1 02faa8ed2d41d92fc1a0fc891beda290055a5abc SHA256 7f03adcfbdd6234381ff8a6fd593d61f2549e290dddab69840367b46f1d20b8e
+EBUILD paramiko-1.7.6.ebuild 1040 RMD160 95b428bd6ae7fac76cbf75463fcc0fcf3450e59b SHA1 cdf2dc982914dced0584226dd5a7efad8f41e60e SHA256 9952a0f9a43b1af604f95e2e1627754ae903e95b9923c52475e36984e2876332
+MISC ChangeLog 6743 RMD160 b46932978900fd2a65304562f8ffa8070ab916ca SHA1 c7c29fc9775586753da1006695603ac5309fb8a3 SHA256 175863ac179cac97ee85bf372e8cf5462504c274775f2d977fe966766dbab842
 MISC metadata.xml 897 RMD160 53d2f82df4ad314ad8543ca95e82037f7e4e3a50 SHA1 403f5279ce7df3f3e9a76dd7a7096f855e5abd61 SHA256 2706e534ea7bc52cf5fbc3ce6ee4008ec371db4869a76edcbbbd78782b63fd17
