@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/paramiko
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/paramiko/ChangeLog,v 1.50 2009/12/19 19:33:41 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/paramiko/ChangeLog,v 1.51 2010/01/24 17:09:10 tgall Exp $
+
+  24 Jan 2010; Tom Gall <tgall@gentoo.org> paramiko-1.7.6.ebuild:
+  stable on ppc64
 
   19 Dec 2009; Raúl Porcel <armin76@gentoo.org> paramiko-1.7.6.ebuild:
   ia64/sparc stable wrt #295697
